# obs-text-pango

./: CMakeLists.txt  buildspec.json
.github/scripts/: .Aptfile  .Brewfile
cmake/: ObsPluginHelpers.cmake
